Fix service logo alignment

--- a/ui-library/scss/home.scss
+++ b/ui-library/scss/home.scss
@@ -12,7 +12,7 @@ img.cts-logo {
 
 img.service-logo {
   max-height: $service-logo-height;
-  width: $logo-width;
+  max-width: $logo-width;
 }
 
 h1 {
